feat: album module
